[package]
name = "protalignspec"
version = "0.1.0"
edition = "2024"

[dependencies]
augurs = "0.10.1"
augurs-clustering = "0.10.1"
augurs-forecaster = "0.10.1"
clap = { version = "4.5.53", features = ["derive"] }
forust = "0.1.0"
smartcore = { version = "0.4.8", features = ["datasets", "ndarray-bindings"] }
